kubernetes/apps/external-endpoints/services/app/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      url: "https://unifi.dcunha.io"
      group: homelab
      interval: 1m
      ui:
        hide-hostname: true
        hide-url: true
      conditions:
        - "[STATUS] == 200"
spec:
  clusterIP: None
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      appProtocol: https
