kubernetes/apps/external-endpoints/services/app/unifi/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  labels:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https
  hostnames:
    - unifi.dcunha.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: unifi
          port: 443
