kubernetes/apps/external-endpoints/services/app/unifi/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      url: "https://unifi.dcunha.io"
      group: external-endpoints
      interval: 1m
      conditions:
        - "[STATUS] == 200"
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  clusterIP: None
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: unifi
  labels:
    kubernetes.io/service-name: unifi
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.99.4
    conditions:
      ready: true
ports:
  - name: https
    port: 443
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: unifi
spec:
  hostnames:
    - unifi.dcunha.io
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: unifi
          port: 443
